[package]
name = "pi_ecs_old"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "ecs"
repository = "https://github.com/GaiaWorld/pi_ecs_old.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_ecs_old", "ecs"]

[dependencies]
pi_slab = "0.1"
pi_atom = "0.1"
pi_map = "0.1"
pi_any = "0.1"
pi_pointer = "0.1"
pi_listener = "0.1"
pi_hash = "0.1"
pi_time = "0.1"
pi_share = "0.1"
pi_debug_info = "0.1"
paste = "0.1"
lazy_static = "1.4"
log = "0.4"
# im = "*"

# [dependencies.web-sys]
# version = "*"
# features = [
# 	"console",
# ]

[features]
defualt = ["runtime"]
runtime = []

# [[example]]
# name = "expanded"

# [[example]]
# name = "basic"



